app/components/TruncateTools/TruncateTools.module.scss
@use "./../../styles/_breakpoints" as *;
:global(*) {
  font-family: inherit;
}

.tooltip {
  position: relative;
  display: inline-block;
  padding: 5px;
  cursor: pointer;
  font-family: Inter;
  font-weight: 500;
  font-style: Medium;
  line-height: 100%;
  letter-spacing: 0%;
  font-size: 18.39px;
  @include respond-to-max(lg) {
    font-size: 17px;
  }
  @include respond-to-max(md) {
    font-size: 15px;
  }
  @include respond-to-max(sm) {
    font-size: 12px;
  }
  @include respond-to-max(xs) {
    font-size: 9.19px;
  }
}

.tooltip_text {
  background-color: black;
  z-index: 1;
  position: fixed;
  top: 0;
  background: #000;
  color: #fff;
  white-space: nowrap;
  padding: 10px 15px;
  border-radius: 7px;
  visibility: hidden;
  opacity: 0;
  transition: opacity 0.5s ease;
  font-size: 18.39px;
  @include respond-to-max(lg) {
    font-size: 17px;
    padding: 10px 15px;
    border-radius: 7px;
  }
  @include respond-to-max(md) {
    font-size: 15px;
  }
  @include respond-to-max(sm) {
    font-size: 12px;
  }
  @include respond-to-max(xs) {
    font-size: 9.19px;
    padding: 5px 7.5px;
    border-radius: 3.5px;
  }
}

// .tooltip_text::before {
//   content: "";
//   position: absolute;
//   left: 50%;
//   top: 100%;
//   border: 15px solid;
//   border-color: black black black black;
// }

.tooltip:hover .tooltip_text {
  position: absolute;
  visibility: visible;
  transition: 0.3s ease-in-out;
  opacity: 1;
  transform: translateY(-100%);
}

